@@ -78,7 +78,7 @@ public class CreateFolder implements Runnable {
                     mainFrame.jPanel14.repaint();
                     mainFrame.jPanel14.revalidate();
                     mainFrame.jPanel14.validate();
-                    mainFrame.reloadBuckets();
+                    mainFrame.drawBuckets();
                 }
             });
 
