@@ -80,7 +80,7 @@ public class ObjectACL implements Runnable {
                     mainFrame.jPanel14.repaint();
                     mainFrame.jPanel14.revalidate();
                     mainFrame.jPanel14.validate();
-                    mainFrame.reloadBuckets();
+                    mainFrame.drawBuckets();
                 }
             });
 
