@@ -110,7 +110,7 @@ public class Snapshot implements Runnable {
                     mainFrame.jPanel14.repaint();
                     mainFrame.jPanel14.revalidate();
                     mainFrame.jPanel14.validate();
-                    mainFrame.reloadBuckets();
+                    mainFrame.drawBuckets();
                 }
             });
 
